# users_app

./: .env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  generate_first_user.py  locustfile.py  pyproject.toml  security.py  settings.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 2c5428b740af_create_users_table.py  b4afbc5a70c0_create_admin_table.py  c0eb5186461b_new_admin_row.py  eb43086a3c70_remove_admin_column.py
tests/: admin_access_test.py  conftest.py  database_test.py  endpoints_test.py  test_security.py
