[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["GabrielTeodoroSan <gabrielteodorodomingues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
httpx = "^0.27.0"
email-validator = "^2.2.0"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.9"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
isort = "^5.13.2"
blue = "^0.9.1"
pytest = "^8.3.2"
testcontainers = "^4.8.1"


[tool.taskipy.tasks]
run = 'docker stop some-postgres; docker container rm some-postgres; docker run --name some-postgres -e POSTGRES_PASSWORD=connect_asteri1234 -e POSTGRES_USER=asteri -e POSTGRES_DB=asteri_users_db -p 5432:5432 -d postgres; uvicorn app.main:app --host 0.0.0.0 --reload'
test = 'export PYTHONPATH="$(pwd)/app:$PYTHONPATH"; pytest -cov=app'
clear = 'isort . && blue .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
